<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tsdf_reconst</name>
  <version>0.0.0</version>
  <description>RTAB-Map's launch files, C-hull creation</description>
  <maintainer email="tsusaka@ucl.nuee.nagoya-u.ac.jp">tsusaka</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- <depend>rtabmap_msgs</depend> -->
  <!-- <depend>rtabmap_odom</depend> -->
  <!-- <depend>rtabmap_slam</depend> -->
  <!-- <depend>rtabmap_conversions</depend> -->
  <!-- <depend>rtabmap_util</depend> -->
  <!-- <depend>rtabmap_ros</depend> -->
  <!-- <depend>rtabmap</depend> -->

  <!-- ROS 2 Core Dependencies -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <!-- RTAB-Map Dependencies (変換ユーティリティ含む) -->
  <depend>rtabmap_msgs</depend>
  <depend>rtabmap_conversions</depend>

  <!-- PCL Dependencies (ROS公式パッケージ) -->
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>

  <!-- PCL System Dependency (Ubuntu標準のlibpcl-dev) -->
  <build_depend>libpcl-all-dev</build_depend>
  <exec_depend>libpcl-all</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
